fix background styles on small devices
add mixins to fix background on small devices

--- a/frontend/src/sections/intro/Intro.scss
+++ b/frontend/src/sections/intro/Intro.scss
@@ -8,6 +8,13 @@
   display: flex;
   flex-direction: column;
 
+  .background-smart-position {
+    background-position: center;
+
+    @include sizes.for-size(phone) {
+      background-position-x: -35rem;
+    }
+  }
   .heading-div {
     align-self: center;
     margin: auto;
