--- a/frontend/src/types/_sizes.scss
+++ b/frontend/src/types/_sizes.scss
@@ -13,7 +13,7 @@ $footerHeight: 5rem;
 
 $supportedSizes: (
   phone-sm: 420px,
-  phone: 767px,
+  phone: 590px,
   tablet: 768px,
   tablet-lg: 1024px,
   desktop: 1025px,
